--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
     <section class="container-fluid">
         <div class="row align-items-center">
             <div class="col-xl-4 d-flex justify-content-around align-items-center">
-                <div class="projectBox">
-                    <h3>Project One</h3>
-                    <p class="pt-3 lead projectText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-                        reiciendis
-                        tempore aut totam obcaecati minus tenetur nulla. Velit accusantium libero et distinctio vero
-                        aperiam iure eaque quidem fuga reprehenderit! Fugit!
+                <a class="projectBox" href="https://bejewelled-pothos-143c72.netlify.app/" target="_blank">
+                    <h3>Tic-Tac-Toe</h3>
+                    <p class="pt-3 lead projectText">TicTacToe made with vanilla JS.
                     </p>
-                </div>
+                </a>
             </div>
             <div class="col-xl-4 d-flex justify-content-around align-items-center">
                 <div class="projectBox">
